k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btpaypro-api
  namespace: btpaypro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: btpaypro-api
  template:
    metadata:
      labels:
        app: btpaypro-api
    spec:
      containers:
        - name: api
          image: samii99/btpaypro-api:latest
          ports:
            - containerPort: 8080
