k8s/webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btpaypro-webui
  namespace: btpaypro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: btpaypro-webui
  template:
    metadata:
      labels:
        app: btpaypro-webui
    spec:
      containers:
        - name: webui
          image: samii99/btpaypro-webui:latest
          ports:
            - containerPort: 8080
