k8s/mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql
  namespace: btpaypro
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - name: tcp-mssql
      port: 1433
      targetPort: 1433
