k8s/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: btpaypro-webui
  namespace: btpaypro
spec:
  type: ClusterIP
  selector:
    app: btpaypro-webui
  ports:
    - name: http
      port: 80
      targetPort: 8080
