k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btpaypro-ingress
  namespace: btpaypro
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
    - host: btpaypro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: btpaypro-webui
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: btpaypro-api
                port:
                  number: 8080
